# microstrain_3dmgx2_imu

./: 3dmgx2.cc  CHANGELOG.rst  CMakeLists.txt  imu_node.cc  imu_node.launch  mainpage.dox  manifest.xml  microstrain_3dmgx2.launch  package.xml
include/3dmgx2_driver/: 3dmgx2.h
include/microstrain_3dmgx2_imu/: 3dmgx2.h  3dmgx2.hpp
src/: 3dmgx2.cc  get_id.cpp  imu_node.cc
