<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>microstrain_3dmgx2_imu</name>
  <version>1.5.13</version>
  <description>A driver for IMUs compatible the microstrain 3DM-GX2 and 3DM-GX3 protocol. Includes 
    a heavily modified standalone driver pulled from the player distribution, 
    and a ROS node.</description>
  <maintainer email="chadrockey@gmail.com">Chad Rockey</maintainer>

  <license>LGPL</license>

  <url type="website">http://www.ros.org/wiki/microstrain_3dmgx2_imu</url>
  <url type="bugtracker">https://github.com/ros-drivers/microstrain_3dmgx2_imu/issues</url>
  <url type="repository">https://github.com/ros-drivers/microstrain_3dmgx2_imu</url>

  <author>Jeremy Leibs</author>
  <author>Blaise Gassend</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>class_loader</build_depend>
  <build_depend>log4cxx</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>self_test</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>class_loader</exec_depend>
  <exec_depend>log4cxx</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>self_test</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
